# bewerbungsmaster

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy_webapp.yml
backend/: Dockerfile  database.py  docker-compose.test.yml  main.py  models.py  pyproject.toml  scraping.py  scraping_utils.py
backend/tests/: tests.py
frontend/: .babelrc  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  theme.js
tests/: test_backend.py
