[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["lukas <lukas.meinzer.98@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
SQLAlchemy = "^2.0.36"
pytz = "^2024.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
PyMySQL = "^1.1.1"
pytest = "^8.3.4"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
